# streamlinux

./: .gitignore  COMO_COMENZAR.md  COMPONENTS_STATUS.md  CONTRIBUTING.md  DOCUMENTACION_COMPLETA.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  LICENSE  PROFESSIONAL_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP_PROFESIONAL.md  SECURITY.md  SECURITY_AND_PRIVACY.md  SECURITY_AUDIT_VERIFICATION.md  SECURITY_VERIFICATION.md  STREAMLINUX_DOCUMENTATION.md
.github/: copilot-instructions.md
android-client/: build-apk.sh  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/cpp/: CMakeLists.txt  streamlinux_jni.cpp
android-client/app/src/main/cpp/decoder/: audio_decoder.cpp  video_decoder.cpp
android-client/app/src/main/cpp/sync/: av_sync.cpp
android-client/app/src/main/java/com/streamlinux/client/: MainActivity.kt  NativeDecoder.kt  StreamLinuxApp.kt
android-client/app/src/main/java/com/streamlinux/client/network/: LANDiscovery.kt  SignalingClient.kt  WebRTCClient.kt
android-client/app/src/main/java/com/streamlinux/client/security/: MessageCrypto.kt
android-client/app/src/main/java/com/streamlinux/client/settings/: AppSettings.kt
android-client/app/src/main/java/com/streamlinux/client/ui/: ConnectActivity.kt  QRScanActivity.kt  SettingsActivity.kt  StreamActivity.kt
android-client/app/src/main/java/com/streamlinux/client/ui/theme/: Theme.kt
android-client/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-client/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-client/app/src/main/res/values-es/: strings.xml
android-client/app/src/main/res/xml/: network_security_config.xml
linux-gui/: README.md  i18n.py  install.sh  message_crypto.py  portal_screencast.py  requirements.txt  security.py  streamlinux_gui.py  usb_manager.py  webrtc_streamer.py
linux-gui/data/: com.streamlinux.host.desktop  com.streamlinux.host.metainfo.xml
linux-gui/packaging/arch/: PKGBUILD  build-arch.sh
linux-gui/packaging/deb/: build-deb.sh
linux-gui/packaging/flatpak/: com.streamlinux.host.yaml
linux-gui/packaging/rpm/: build-rpm.sh  streamlinux.spec
linux-gui/scripts/: build.sh
linux-host/: CMakeLists.txt
linux-host/include/stream_linux/: audio_capture.hpp  audio_encoder.hpp  av_synchronizer.hpp  backend_detector.hpp  cli.hpp  common.hpp  control_channel.hpp  display_backend.hpp  video_encoder.hpp  wayland_capture.hpp  webrtc_transport.hpp  x11_capture.hpp
linux-host/src/: main.cpp
linux-host/src/audio/: audio_capture.cpp  pipewire_audio.cpp  pulseaudio_audio.cpp
linux-host/src/capture/: backend_detector.cpp  display_backend.cpp  pipewire_stream.cpp  wayland_capture.cpp  x11_capture.cpp
linux-host/src/cli/: cli_parser.cpp  config_manager.cpp
linux-host/src/control/: control_channel.cpp
linux-host/src/encoding/: audio_encoder.cpp  video_encoder.cpp
linux-host/src/sync/: av_synchronizer.cpp
linux-host/src/transport/: webrtc_transport.cpp
releases/: install.sh
releases/rpm/: streamlinux-0.2.0-1.alpha.fc43.x86_64.rpm
releases/v1.1.1/streamlinux-1.1.1-linux/: com.streamlinux.host.desktop  i18n.py  install.sh  security.py  streamlinux_gui.py  webrtc_streamer.py
signaling-server/: go.mod  go.sum
signaling-server/cmd/server/: main.go
signaling-server/internal/discovery/: mdns.go
signaling-server/internal/qr/: handler.go
signaling-server/internal/signaling/: hub.go  tls.go
streamlinux_e0b5/: penetration_test_report.md  vulnerabilities.csv
streamlinux_e0b5/vulnerabilities/: vuln-0001.md  vuln-0002.md  vuln-0003.md  vuln-0004.md
uploads/: penetration_test_report.md  reporte_pruebas_penetracion.md
uploads/vulnerabilities/: vuln-0001.md  vuln-0002.md  vuln-0003.md  vuln-0004.md  vuln-0005.md  vuln-0006.md  vuln-0007.md  vuln-0008.md  vuln-0009.md  vuln-0010.md  vuln-0011.md  vuln-0012.md  vuln-0013.md  vuln-0014.md
